--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "options": {
                 "shell": {
-                    "executable": "C:\\Windows\\System32\\wsl.exe",
+                    "executable": "C:\\Windows\\System32\\wsl.exe"
                 }
             },
             "command": "g++",
@@ -20,12 +20,32 @@
                 "`wslpath",
                 "'${workspaceFolder}\\problem.exe'`",
                 "`wslpath",
-                "'${file}'`",
+                "'${file}'`"
+            ],
+            "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++ アクティブなファイルのビルド",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "detail": "デバッガーによって生成されたタスク。"
         }
     ]
 }
